# ece-1894-with-microsoft

./: .gitignore  DryerRegression.py  MessageFormat.txt  README.md  mqttWrite.py
Dryer-RT/: CMakeLists.txt  CMakeWorkspaceSettings.json  main.c
DryerAccelCode/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  app_manifest.json  i2c.c  main.c
DryerAccelCode/AvnetStarterKitReferenceDesign/: CMakeCache.txt  CMakeLists.txt  app_manifest.json  i2c.c  main.c  sd1306.c  sd1306.h
DryerAccelCode/InterCoreCommsMT3620_BMetal/: CMakeLists.txt  CMakeSettings.json  app_manifest.json
HighLevelApp/: CMakePresets.json
HighLevelApp/Tools/linux-x64/: ShowIoTCentralConfig.pgp
RT-App-Development/: README.md  mqttWrite.py
RT-App-Development/Dryer-RT/: CMakePresets.json  app_manifest.json  vcpkg-configuration.json
RT-App-Development/Dryer-RT/int/: i2c_lsm6dso.h
RT-App-Development/HighLevelApp/: CMakeLists 2.txt  build_options.h  oled 2.h  oled.c
